--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.3.1",
     "bulma": "^0.7.1",
     "collect.js": "^4.0.28",
     "gun": "^0.9.99996",
