--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "@fortawesome/fontawesome-free": "^5.3.1",
     "bulma": "^0.7.1",
     "collect.js": "^4.0.28",
-    "gun": "^0.9.99996",
+    "gun": "0.2019.930",
     "lodash": "^4.17.11",
     "mithril": "^1.1.6"
   },
